# viralflow

./: README.md  pyproject.toml
configs/: default.yaml  high_performance.yaml  viralflip_x.yaml
data/: dataset_registry.yaml
scripts/: check_accuracy.py  download_essential.ps1  download_more_data.py  download_public_datasets.py  evaluate.py  gather_real_data.py  load_real_data.py  prepare_real_data.py  prepare_training_data.py  quick_start.ps1  run_ablations.py  train.py  train_max_accuracy.py  train_viralflip_x.py
src/viralflip/: __init__.py
src/viralflip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/viralflip/active/: __init__.py  acquisition.py  scheduler.py  user_model.py
src/viralflip/baseline/: __init__.py  changepoint.py  pbm.py
src/viralflip/conformal/: __init__.py  conformal_predictor.py  nonconformity.py
src/viralflip/data/: __init__.py  dataset.py  real_data_loader.py
src/viralflip/debias/: __init__.py  ridge.py
src/viralflip/eval/: __init__.py  ablations.py  calibration.py  metrics.py
src/viralflip/explain/: __init__.py  explain.py
src/viralflip/features/: __init__.py  baro.py  cough.py  gait_active.py  gps.py  imu_passive.py  light.py  quality.py  rppg.py  screen.py  tapping.py  voice.py
src/viralflip/federated/: __init__.py  client.py  differential_privacy.py  server.py
src/viralflip/model/: __init__.py  drift_score.py  interactions.py  lag_lattice.py  personalization.py  viralflip.py  virus_types.py
src/viralflip/pretrain/: __init__.py  masked_autoencoder.py  pretrain_trainer.py
src/viralflip/robust/: __init__.py  domain_adversarial.py  irm.py
src/viralflip/train/: __init__.py  build_sequences.py  (+2 more)
tests/: __init__.py  test_debias_ridge.py  test_explanations_counterfactual.py  test_lag_lattice_shapes.py  test_pbm_no_leakage.py
(+5 files in other folders)
